--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "npx tsc",
     "start": "node server/server.js"
   },
   "author": "",
@@ -11,6 +12,7 @@
   "dependencies": {
     "@types/mongodb": "^3.6.3",
     "@types/node": "^14.14.22",
-    "mongodb": "^3.6.3"
+    "mongodb": "^3.6.3",
+    "typescript": "^4.1.3"
   }
 }
